<resources>
  <string name="app_name">Sale Detail</string>
  <string name="action_settings">Settings</string>
  <string name="title_activity_new_sale">New Sale</string>

  <string name="item_details">ITEM DETAILS</string>
  <string name="enter_item_name">Enter Item Name</string>
  <string name="enter_item_quantity">Enter Item Quantity</string>
  <string name="enter_item_rate">Enter Item Rate</string>
  <string name="sgst_9">SGST 9% -</string>
  <string name="igst_9">IGST 9% -</string>
  <string name="total_amount_amount_igst_sgst">Total Amount (Amount + IGST + SGST) -</string>
  <string name="done">DONE</string>
  <string name="item_db">item_db</string>
  <string name="enter_paid_amount_by_customer">Enter Paid Amount By Customer</string>
  <string name="err_greater_amount">Please enter less amount than the subTotal</string>
  <string name="err_name">Please enter customer name</string>
  <string name="err_date">Please enter date</string>
  <string name="err_amount">Please enter paid amount</string>
  <string name="err_items">Please add atleast one item</string>
  <string name="err_balance_amount">Amount should be less than the balance amount</string>
  <string name="enter_customer_name">Enter customer name</string>
  <string name="sub_total">Subtotal</string>
  <string name="id">id</string>
  <string name="item_name">Item Name</string>
  <string name="qty">Qty</string>
  <string name="rate">Rate</string>
  <string name="total_amount">Total Amount</string>
  <string name="delete">DELETE</string>
  <string name="pay">PAY</string>
    <string name="partially_paid">Partially Paid</string>
  <string name="paid">Paid</string>
</resources>
