<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    app:cardElevation="2dp"
    >
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="4dp"
      android:paddingBottom="8dp"
      android:paddingTop="8dp"
      >

    <TextView
        android:id="@+id/tvId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:text="@string/id"
        android:textColor="@color/black_alpha_87"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.1"
        />

    <TextView
        android:id="@+id/tvItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/item_name"
        android:textColor="@color/black_alpha_87"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="35"
        app:layout_constraintLeft_toRightOf="@id/tvId"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.35"
        />

    <TextView
        android:id="@+id/tvQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:text="@string/qty"
        android:textColor="@color/black_alpha_87"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="15"
        app:layout_constraintLeft_toRightOf="@id/tvItemName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.15"
        />

    <TextView
        android:id="@+id/tvRate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:text="@string/rate"
        android:textColor="@color/black_alpha_87"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="20"
        app:layout_constraintLeft_toRightOf="@id/tvQuantity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2"
        />

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:text="@string/total_amount"
        android:textColor="@color/black_alpha_87"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvRate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2"
        />
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>